# read-rope

./: .gitignore  Draft1.asc  LICENSE.txt  README.md  ltspice-sim-with-load.asc  ltspice-sim-with-load.raw  read-rope-4-bend-prototype-sim.py  read-rope-configs-parallel.py  read-rope-configs-series.py
Prototype-PCB/: Prototype-PCB.bak  Prototype-PCB.csv  Prototype-PCB.kicad_pcb  Prototype-PCB.kicad_pcb-bak  Prototype-PCB.net  Prototype-PCB.pro  Prototype-PCB.sch  Prototype-PCB.sch-bak  fp-info-cache  fp-lib-table
Prototype-PCB/gerber/: Prototype-PCB-B_Adhes.gbr  Prototype-PCB-B_CrtYd.gbr  Prototype-PCB-B_Cu.gbr  Prototype-PCB-B_Fab.gbr  Prototype-PCB-B_Mask.gbr  Prototype-PCB-B_Paste.gbr  Prototype-PCB-B_SilkS.gbr  Prototype-PCB-Edge_Cuts.gbr  Prototype-PCB-F_Adhes.gbr  Prototype-PCB-F_CrtYd.gbr  Prototype-PCB-F_Cu.gbr  Prototype-PCB-F_Fab.gbr  Prototype-PCB-F_Mask.gbr  Prototype-PCB-F_Paste.gbr  Prototype-PCB-F_SilkS.gbr  Prototype-PCB-NPTH.drl  Prototype-PCB-PTH.drl
adc_code/arduino/read-rope-ADC/: read-rope-ADC.ino
flex_circuit_sim/: .gitignore  output.raw  outresult  params.inc  read-rope-circuit.cir  read-rope-flex-resistor-circuit-sim.py
kicad-footprints/KSR221GNCLFS-SMT.pretty/: KSR221GNCLFS-SMT-NCSPST.kicad_mod
kicad-footprints/KTR18EZPF1004/: KTR18EZPF1004.lib
kicad-footprints/KTR18EZPF1004/footprints.pretty/: KTR18EZPF1004.kicad_mod
kicad-footprints/KTR18EZPF2004/: KTR18EZPF2004.lib
kicad-footprints/KTR18EZPF2004/footprints.pretty/: KTR18EZPF2004.kicad_mod
kicad-footprints/KTR18EZPF3004/: KTR18EZPF3004.lib
kicad-footprints/KTR18EZPF3004/footprints.pretty/: KTR18EZPF3004.kicad_mod
kicad-footprints/KTR18EZPF7503/: KTR18EZPF7503.lib
kicad-footprints/KTR18EZPF7503/footprints.pretty/: KTR18EZPF7503.kicad_mod
kicad-footprints/Read-Rope.pretty/: KSR221GNCLFS-SMT-NCSPST.kicad_mod
old_base/: Prototype-PCB-BOM.csv  ltspice-sim-with-load.asc  ltspice-sim-with-load.raw
old_base/Prototype-PCB/: Prototype-PCB-cache.lib  Prototype-PCB.bak  Prototype-PCB.kicad_pcb-bak  Prototype-PCB.net  Prototype-PCB.sch  Prototype-PCB.sch-bak  sym-lib-table
read_rope_shared_library/: CMakeLists.txt  INSTALL.md  readrope.pc.in
read_rope_shared_library/include/: readrope.h
read_rope_shared_library/src/: readrope.cpp
read_rope_shared_library/test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  libreadrope.so.0  libreadrope.so.0.1  read-rope-test  readrope.pc  test.cpp
(+13 files in other folders)
